<resources>
    <!-- this is a hack, this should be generated at the build step,
    \but osmdroid also generated this, and generates it to be 0, which breaks this
       I think. Not completely sure. Anyway, this overrides both of them -->
    <string name="google_play_services_version">12451000</string>
    <string name="app_name">QRHunt</string>
    <string name="title_map">Map</string>
    <string name="title_leaderBoard">Leaderboard</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_scanner">Scanner</string>

    <!-- for user_settings -->
    <string name="title_settings">Settings</string>
    <string name="settings_edit_profile">Edit Profile</string>
    <string name="settings_profile_picture">Change Profile Picture</string>
    <string name="settings_share_profile">Share Profile</string>
    <string name="settings_register_new_device">Register New Device</string>
    <string name="settings_delete_profile">Delete Profile</string>

    <!-- for user_settings_edit_profile -->
    <string name="edit_profile_title">Edit Profile</string>
    <string name="username_hint">User_345</string>
    <string name="username_title">USERNAME</string>
    <string name="email_hint">johndoe@domain.ca</string>
    <string name="email_title">EMAIL</string>
    <string name="socials_title">SOCIAL MEDIA</string>
    <string name="socials_hint">eg. Instagram, Twitch URL</string>

    <!-- for profile -->
    <string name="username_profile_title">Username</string>
    <string name="profile_rank_title">Total Score Rank</string>
    <string name="codes_scanned_title">QR Codes Scanned</string>
    <string name="highest_unique_title">Highest Unique QR</string>
    <string name="no_qrs">Library is empty</string>

    <!-- for leaderboard -->
    <string name="leaderboard_title">Leaderboard</string>
    <string name="pound_sign">#</string>
    <string name="username_placeholder">Username</string>
    <string name="score_divider">|</string>
    <string name="highest_unique_num">UQ</string>
    <string name="scans_num">SC</string>
    <string name="total_score">score</string>
    <string name="my_rank">My Rank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_icon_desc">settings</string>
    <string name="ok">OK</string>
    <string name="add_comment">Add a comment…</string>

    <!-- for after scan -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="no_location">No Location</string>

    <!-- for search -->
    <string name="search_hint">Search Username</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_prompt">Delete Account?</string>
    <string name="delete_account_confirmed">Account Deleted</string>
    <string name="delete">Delete</string>
    <string name="delete_qr_profile">Delete QR Profile?</string>
    <string name="no_results">No results found</string>


    <!-- for callout -->
    <string name="callout_text">Callout Text</string>
    <string name="show_my_rank">Show my Rank</string>
    <string name="close">close</string>
    <string name="qrgen_text">QRGen Text</string>
    <string name="scan_qr_code_button">Scan QR Code</string>

</resources>