<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editPlayerProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding"
    android:background="@drawable/rec_frame_bg"
    android:padding="@dimen/large_padding">

    <ImageView
        android:id="@+id/settings_edit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/settings_icon_desc"
        android:padding="@dimen/padding"
        android:src="@drawable/ic_baseline_edit_24_settings_edit_profile_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:padding="@dimen/padding"
        android:text="@string/edit_profile_title"
        android:textColor="@color/accent_grey_dark"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toRightOf="@id/settings_edit_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/spacer0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_space"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_title" />

    <TextView
        android:id="@+id/username_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/username_title"
        android:textSize="@dimen/small_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer0" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:background="@drawable/rounded_rectangle_edit_text"
        android:fontFamily="@font/quicksand"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="@dimen/padding"
        android:textColor="@color/accent_grey_blue_dark"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_title" />


    <Space
        android:id="@+id/spacer1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_username" />


    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/email_title"
        android:textSize="@dimen/small_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer1" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_rectangle_edit_text"
        android:fontFamily="@font/quicksand"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding"
        android:textColor="@color/accent_grey_blue_dark"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintTop_toBottomOf="@id/email_title" />


    <Space
        android:id="@+id/spacer2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />


    <TextView
        android:id="@+id/socials_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:text="@string/socials_title"
        android:textSize="@dimen/small_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer2" />

    <EditText
        android:id="@+id/edit_socials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_edit_text"
        android:fontFamily="@font/quicksand"
        android:hint="@string/socials_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/padding"
        android:textColor="@color/accent_grey_blue_dark"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_buttons"
        app:layout_constraintTop_toBottomOf="@id/socials_title" />

    <LinearLayout
        android:id="@+id/edit_profile_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_socials">
        <!-- this serves solely to push buttons to end -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/ok"
            android:textColor="@color/accent_grey_dark"
            android:clickable="true"
            android:id="@+id/ok_edit_profile"/>

        <Button
            android:id="@+id/cancel_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/accent_grey_dark"
            android:clickable="true" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>