<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_off_white_blue_light"
    android:padding="@dimen/large_padding">

    <ImageView android:id="@+id/settings_edit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24_settings_edit_profile_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/padding"/>

    <TextView android:id="@+id/edit_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/settings_edit_icon"
        android:text="@string/edit_profile_title"
        android:padding="@dimen/padding"
        android:textSize="@dimen/subtitle_size"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/main_blue"
        />

    <Space android:id="@+id/spacer0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_space"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_title"
        />

    <TextView android:id="@+id/username_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spacer0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/quicksand"
        android:text="@string/username_title"
        android:textSize="@dimen/small_text" />

    <EditText android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/accent_grey_blue_dark"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintTop_toBottomOf="@id/username_title"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <Space android:id="@+id/spacer1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space"
        app:layout_constraintTop_toBottomOf="@id/edit_username"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_title"
        android:fontFamily="@font/quicksand"
        android:textSize="@dimen/small_text"
        app:layout_constraintTop_toBottomOf="@id/spacer1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <!--https://stackoverflow.com/a/10397929-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email_title">

        <EditText android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:fontFamily="@font/quicksand"
            android:textColor="@color/accent_grey_blue_dark"
            android:textSize="@dimen/subtitle_size"
            android:background="@drawable/rounded_rectangle_edit_text">

            <requestFocus/>

        </EditText>

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="8dp"
            android:backgroundTint="@color/accent_grey_blue_dark"
            android:background="@drawable/ic_baseline_visible_dark_blue_grey" />

    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>