<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rec_fragment_bg"
    android:padding="@dimen/padding">

    <TextView
        android:id="@+id/delete_qr_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding"
        android:fontFamily="@font/asap"
        android:padding="@dimen/padding"
        android:text="@string/delete_qr_profile"
        android:textColor="@color/main_red_midtone"
        android:textSize="@dimen/subtitle_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/statement_padding"
        android:layout_height="@dimen/padding"
        app:layout_constraintLeft_toRightOf="@id/delete_qr_dialog_title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_qr_dialog_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:fontFamily="@font/asap"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/delete_qr_dialog_confirm_button"
        app:layout_constraintTop_toBottomOf="@id/delete_qr_dialog_title" />

    <Button
        android:id="@+id/delete_qr_dialog_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:fontFamily="@font/asap"
        android:text="@string/ok"

        android:textColor="@color/main_red_midtone"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_qr_dialog_title" />

</androidx.constraintlayout.widget.ConstraintLayout>