<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.85"
    android:paddingHorizontal="@dimen/small_padding"
    android:background="@drawable/rec_leaderboard_panel_fg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/top_rank_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/back_padding"
        android:background="@drawable/ic_rank_num_three"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/top_rank_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="@dimen/back_padding"
        android:text="@string/username_placeholder"
        android:textColor="@color/accent_blue_light"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_rank_num" />

    <TextView
        android:id="@+id/top_rank_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:textStyle="bold"
        android:text="@string/total_score"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_rank_username" />

    <TextView
        android:id="@+id/top_rank_unique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="@dimen/padding"
        android:text="@string/highest_unique_num"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@id/top_rank_unique_desc"
        app:layout_constraintEnd_toEndOf="@id/top_rank_unique_desc"
        app:layout_constraintTop_toBottomOf="@id/top_rank_score" />

    <TextView
        android:id="@+id/top_rank_unique_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="@dimen/padding"
        android:text="unique"
        android:textColor="@color/background_grey"
        android:textSize="@dimen/extra_small_text"
        android:translationY="-15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_rank_unique" />


    <TextView
        android:id="@+id/top_rank_scans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="@dimen/padding"
        android:text="@string/scans_num"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@id/top_rank_scans_desc"
        app:layout_constraintStart_toStartOf="@id/top_rank_scans_desc"
        app:layout_constraintTop_toBottomOf="@id/top_rank_score" />

    <TextView
        android:id="@+id/top_rank_scans_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:padding="@dimen/padding"
        android:text="scanned"
        android:textColor="@color/background_grey"
        android:textSize="@dimen/extra_small_text"
        android:translationY="-15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_rank_scans" />

</androidx.constraintlayout.widget.ConstraintLayout>