<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_grey"
    android:padding="20dp">

    <!--Todo add content description for all images (?)-->
    <ImageView android:id="@+id/settings_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_24_light_off_white_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="20dp"
        />

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:padding="20dp"
        android:text="@string/title_settings"
        android:textColor="@color/main_blue"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView android:id="@+id/settings_edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24_light_off_white_blue"
        app:layout_constraintTop_toBottomOf="@id/settings_back_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"/>

    <TextView android:id="@+id/settings_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_blue"
        android:text="@string/settings_edit_profile"
        android:fontFamily="@font/quicksand"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:layout_constraintLeft_toRightOf="@id/settings_edit_image"
        android:padding="10dp"/>


    <ImageView android:id="@+id/settings_change_profile_picture_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_photo_camera_24_light_off_white_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_edit_image" />

    <TextView android:id="@+id/settings_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_blue"
        android:text="@string/settings_profile_picture"
        android:fontFamily="@font/quicksand"
        app:layout_constraintLeft_toRightOf="@id/settings_change_profile_picture_image"
        app:layout_constraintTop_toBottomOf="@id/settings_edit_profile"
        android:padding="10dp"/>


    <ImageView android:id="@+id/settings_generate_QR_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_exit_to_app_light_off_white_blue"
        app:layout_constraintTop_toBottomOf="@+id/settings_change_profile_picture_image"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView android:id="@+id/settings_generate_QR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_generate_qr"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/main_blue"
        app:layout_constraintTop_toBottomOf="@id/settings_profile_picture"
        app:layout_constraintLeft_toRightOf="@id/settings_generate_QR_image"
        android:padding="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>