<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_grey"
    android:padding="@dimen/padding"
    android:id="@+id/player_settings">

    <LinearLayout android:id="@+id/player_settings_title_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <ImageView android:id="@+id/player_settings_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24_light_off_white_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/player_profile_settings_spacer"
            android:scaleX="1.25"
            android:scaleY="1.25"
            android:padding="@dimen/padding"
            android:layout_gravity="bottom"/>

        <TextView
            android:id="@+id/player_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="@string/title_settings"
            android:textColor="@color/main_blue"
            android:textSize="@dimen/title_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/padding"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Space android:id="@+id/player_profile_settings_spacer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_space"
        app:layout_constraintTop_toBottomOf="@id/player_settings_title_section"/>

    <LinearLayout android:id="@+id/player_settings_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/player_profile_settings_spacer"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <ImageView android:id="@+id/player_settings_edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_edit_24_light_off_white_blue"
            android:layout_gravity="bottom"
            android:padding="@dimen/padding"/>

        <TextView android:id="@+id/player_settings_edit_profile_clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_blue"
            android:text="@string/settings_edit_profile"
            android:fontFamily="@font/quicksand"
            android:textSize="@dimen/subtitle_size"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/padding"
            android:clickable="true"/>
    </LinearLayout>

    <Space android:id="@+id/player_profile_settings_mid_spacer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space"
        app:layout_constraintTop_toBottomOf="@id/player_settings_edit_profile"/>

    <LinearLayout android:id="@+id/player_settings_log_in_qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/player_profile_settings_mid_spacer"
        app:layout_constraintLeft_toLeftOf="parent"
        >
    <ImageView android:id="@+id/player_settings_qr_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_exit_to_app_light_off_white_blue"
        app:layout_constraintTop_toBottomOf="@+id/player_profile_settings_low_spacer"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="@dimen/padding"
        android:layout_gravity="bottom"/>

    <TextView android:id="@+id/player_settings_log_in_qr_clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_generate_qr"
        android:fontFamily="@font/quicksand"
        android:textSize="@dimen/subtitle_size"
        android:textColor="@color/main_blue"
        app:layout_constraintTop_toBottomOf="@id/player_profile_settings_low_spacer"
        app:layout_constraintLeft_toRightOf="@id/player_settings_qr_image"
        android:padding="@dimen/padding"
        android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Space android:id="@+id/player_profile_settings_low_spacer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space"
        app:layout_constraintTop_toBottomOf="@id/player_settings_log_in_qr"/>

    <LinearLayout android:id="@+id/player_settings_delete_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/player_profile_settings_low_spacer"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <ImageView android:id="@+id/player_settings_delete_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_photo_camera_24_light_off_white_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_profile_settings_mid_spacer"
            android:padding="@dimen/padding"
            android:layout_gravity="bottom"/>

        <TextView android:id="@+id/player_settings_delete_profile_clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_blue"
            android:text="@string/settings_delete_profile"
            android:fontFamily="@font/quicksand"
            android:textSize="@dimen/subtitle_size"
            app:layout_constraintLeft_toRightOf="@id/player_settings_change_profile_picture_image"
            app:layout_constraintTop_toBottomOf="@id/player_profile_settings_mid_spacer"
            android:padding="@dimen/padding"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Space android:id="@+id/player_settings_below_spacer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space"
        app:layout_constraintTop_toBottomOf="@id/player_settings_delete_line"/>

    <LinearLayout android:id="@+id/player_settings_picture_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/player_settings_below_spacer"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        >

        <ImageView android:id="@+id/player_settings_change_profile_picture_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_photo_camera_24_light_off_white_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_profile_settings_mid_spacer"
            android:padding="@dimen/padding"
            android:layout_gravity="bottom"/>

        <TextView android:id="@+id/player_settings_change_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_blue"
            android:text="@string/settings_profile_picture"
            android:fontFamily="@font/quicksand"
            android:textSize="@dimen/subtitle_size"
            app:layout_constraintLeft_toRightOf="@id/player_settings_change_profile_picture_image"
            app:layout_constraintTop_toBottomOf="@id/player_profile_settings_mid_spacer"
            android:padding="@dimen/padding"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>